--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -35,17 +35,18 @@ Page {
 
 .logo {
   position: relative;
-  width: 35px;
-  top: 10px;
+  height: 40px;
+  width: 40px;
+  top: 14px;
   left: 10px;
 }
 
 .r-logo {
   position: relative;
-  height: 35px;
-  width: 35px;
-  top: 10px;
-  right: 10px;
+  height: 55px;
+  width: 55px;
+  top: 14px;
+  right: -5px;
   opacity: 0.8;
 }
 
@@ -74,6 +75,15 @@ Page {
   text-align: center;
   color: #07c160;
   font-size:x-large;
+  margin-left: 10px;
+}
+
+.question {
+  position: relative;
+  height: 20px;
+  width: 20px;
+  top: 2px;
+  margin-left: 5px;
 }
 
 .name-group {
